1.3 (not released yet)
o /!\ Now features recursive drawing of portals!
o New object management that should be a lot more efficient.
o A lot of bugfixes in the menus (were taking 100% CPU).
o Added the long-awaited menu to select a map pack.
o 14 map packs bundled.
o Made things a lot more unix-friendly: now uses '~/.asciiportal/' to store
  local data and optionally '/usr/share/asciiportal/' for game data.
o Map pack's 'credits.txt' now gets added to the default credits.
o The nosdl port (truly ASCII!) should be roughly working now.

1.2c bugfixes.

1.2a (Nov 18 2009)
o WADS keys added.
o Music files changed to OGG.
o Menu item for changing map set disabled.
o 5th default ambient music added.
o Number-pad input is fixed.
o Objects in portals when they collapse are more properly delt with.

1.2 (Nov 14 2009)
o Controls finally fixed to react instantly. For real this time.
o Original levels reduced from 50 to 25. Extra levels moved to their own pack.
o 4 default musics available for custom map makers.
o Visual effect added when portals change.
o "Next" for portal gun increments when portal is created.
o Key to turn off all portals ('C') added.
o Game speed is now variable.
o Code hopefully compiles nativly for dingoo and GP2X devices.
o There is a known issue involving mouse movement being caught as input.

1.1 (Oct 21 2009) - Bug fix release:
o Physics bugs concerning boulder movements have been corrected.
o Player will pass through portals determined by aiming direction. 
o The keyboard delay pause has been considerably scaled back. (You still may 
  need to turn before moving, so there may be a pause there.)
o Some levels have been adjusted slightly.
o Comes with all known extra levels and new map packs.
o Player will now "catch" ladders mid fling.
o Level stats no longer try to keep track of time.
o You can now adjust your aim if at the top or bottom of a ladder.
o Portals will no longer count doors as valid walls when calculating normals.