@@ -9,7 +9,7 @@ CXX = g++
 
 CXXFLAGS = -O2 -I /usr/include/xcurses `sdl-config --cflags` -U__NOSDL__ -U__NOSOUND__ -U__DINGOO__ -U__GP2X__ -DAP_VERSION=\"$(AP_VERSION)-dev\" $(GODMODE) $(DEBUG)
 
-LINKFLAGS = `sdl-config --libs` -L/usr/lib -l SDL_mixer -l pdcurses 
+LINKFLAGS = `sdl-config --libs` -L/usr/lib -l SDL_mixer -l pdcurses -l yaml-cpp
 
 %.o: src/%.cpp
 	$(CXX) -c $(CXXFLAGS) $<
