@@ -1,0 +1,11 @@
+  # This is a YAML-formatted file designed to store informations about the given map pack.
+protocol: 1  # The protocol version used. Leave this to the default value.
+number_maps: 50  # The number of levels stored in this map pack.
+name: Default levels # The name of the map pack. Should not exceed 30 characters.
+description: |
+  The map set of choice to begin with ASCIIpOrtal. You will discover all the nice features of ASCIIpOrtal through a serie of levels, ranging from the most basics concepts to more difficult ones.
+  However, it is only a starting point, and you might be looking forward for more challenge: others map packs are available!
+author: Joe Larson  # The author of the map pack.
+version: 0.1  # Version. You might want to provide a changelog file.
+difficulty: 2  # Difficulty range from 0 (easiest) to 10 (hardest)
+priority: 13  # This is used for official map packs only. The default should be fine.
