@@ -1,0 +1,11 @@
+  # This is a YAML-formatted file designed to store informations about the given map pack.
+protocol: 1  # The protocol version used. Leave this to the default value.
+number_maps: 32  # The number of levels stored in this map pack.
+name: masterlevels's funny levels  # The name of the map pack. Should not exceed 30 characters.
+description: |
+  This is a dumb default description intended to serve as an example.
+  You should really edit it to reflect the description of your own map pack!
+author: ASCIIpOrtal  # The author of the map pack.
+version: 0.1  # Version. You might want to provide a changelog file.
+difficulty: 5  # Difficulty range from 0 (easiest) to 10 (hardest)
+priority: 5  # This is used for official map packs only. The default should be fine.
